--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
-        "phpunit/phpunit": "^11"
+        "phpunit/phpunit": "^11",
+        "phpunit/php-code-coverage": "^11.0.8"
     },
     "scripts": {
         "test": "phpunit"
